--- a/pages/tab1/tab1.wxss
+++ b/pages/tab1/tab1.wxss
@@ -40,11 +40,7 @@
   margin-bottom: 20rpx;
 }
 
-.container {
-    padding: 100rpx 0;
-}
 
 button{
-  margin-top: 30rpx;
-  margin-bottom: 30rpx;
+  margin: 30rpx;
 }
