--- a/pages/tab1/tab1.wxml
+++ b/pages/tab1/tab1.wxml
@@ -32,11 +32,55 @@
     </view>
   </view>
 
+  <!-- <view class="page-section page-section-gap">
+    <view class="page-section-title">默认样式</view>
+    <label class="radio">
+      <radio value="r1" />选中
+    </label>
+    <label class="radio">
+      <radio value="r2" />未选中
+    </label>
+  </view> -->
+
   <view class="page-section">
+    <view class="weui-cells__title">计算方式:</view>
+    <view class="weui-cells weui-cells_after-title">
+      <view class="weui-cell">
+        <radio-group class="radio-group" bindchange="radioChange">
+          <!-- <label class="radio" wx:for="{{items}}" wx:key="checked">
+            <radio value="{{item.name}}" checked="{{item.checked}}"/>{{item.name}}
+          </label> -->
+          <label class="radio" >
+            <radio value="0" checked="{{bilvChecked}}"/>比率
+          </label>
+          <label class="radio">
+            <radio value="1" checked="{{!bilvChecked}}"/>金额
+          </label>
+        </radio-group>
+      </view>
+    </view>
+  </view>
+
+  <view class="page-section" class="{{bilvChecked ? '': 'hide'}}">
     <view class="weui-cells__title">直投占比:</view>
     <view class="weui-cells weui-cells_after-title">
       <view class="weui-cell weui-cell_input">
         <input class="weui-input" type="digit" value="{{value_3}}" bindinput="inputValue_3"/>
+      </view>
+    </view>
+  </view>
+
+  <view class="page-section" class="{{!bilvChecked ? '': 'hide'}}">
+    <view class="weui-cells__title">直投金额（万元）:</view>
+    <view class="weui-cells weui-cells_after-title">
+      <view class="weui-cell weui-cell_input">
+        <input class="weui-input" type="digit" value="{{value_4}}" bindinput="inputValue_4"/>
+      </view>
+    </view>
+    <view class="weui-cells__title">存款金额（万元）:</view>
+    <view class="weui-cells weui-cells_after-title">
+      <view class="weui-cell weui-cell_input">
+        <input class="weui-input" type="digit" value="{{value_5}}" bindinput="inputValue_5"/>
       </view>
     </view>
   </view>
