--- a/pages/tab1/tab1.wxss
+++ b/pages/tab1/tab1.wxss
@@ -46,3 +46,24 @@ button{
 .hide{
     display:none
 }
+
+input {
+  font-size: 16px;
+} 
+
+.radio{
+  font-size: 16px;
+}
+.weui-cell-title{
+  width: 120px;
+  margin-right: 10px;
+  font-size: 16px;
+}
+
+.radio.weui-input{
+  display: inline-block;
+  width: 50%;
+}
+radio-group{
+  width: calc(100% - 120px);
+}
