--- a/pages/tab2/tab2.wxss
+++ b/pages/tab2/tab2.wxss
@@ -6,3 +6,14 @@
 button{
   margin: 30rpx;
 }
+input {
+  font-size: 16px;
+} 
+.radio{
+  font-size: 16px;
+}
+.weui-cell-title{
+  width: 120px;
+  margin-right: 10px;
+  font-size: 16px;
+}
